# CGoGN_3

cgogn/core/: CMakeLists.txt  cgogn_core_export.h
cgogn/core/examples/: core_test.cpp
cgogn/core/functions/: attributes.h  cells.h
cgogn/core/functions/mesh_ops/: edge.cpp  edge.h  face.cpp  face.h  volume.cpp  volume.h
cgogn/core/functions/traversals/: vertex.h  volume.h
cgogn/core/types/: cell_marker.h  mesh_traits.h
cgogn/core/types/cmap/: EMR_Map1.h  EMR_Map2.h  EMR_Map3.cpp  EMR_Map3.h  EMR_Map3_Adaptative.cpp  phi.h  (+21 more)
cgogn/geometry/: CMakeLists.txt  cgogn_geometry_export.h
cgogn/geometry/algos/: angle.h  area.h  normal.h  picking.h  volume.h
cgogn/io/: cgogn_io_export.h
cgogn/modeling/: cgogn_modeling_export.h
cgogn/modeling/algos/: subdivision.h
cgogn/modeling/examples/: CMakeLists.txt  emr_volume.cpp  mr_volume.cpp
cgogn/rendering/: cgogn_rendering_export.h  frame_manipulator.cpp  mesh_render.cpp  mesh_render.h  topo_drawer.h  vbo.h
cgogn/rendering/examples/: multiresolution_volume_viewer.cpp
cgogn/rendering/shaders/: compute_volume_centers.cpp  shader_explode_volumes_scalar.h  shader_no_illum_color_per_face.h  shader_program.h  shader_scalar_per_vertex.h
cgogn/simulation/: CMakeLists.txt  cgogn_simulation_export.h
cgogn/simulation/algos/: Simulation_constraint.h  Simulation_solver.h  Simulation_solver_multiresolution.h
cgogn/simulation/examples/: CMakeLists.txt  animation_multiresolution.cpp  linked_volumes.cpp  shape_matching.cpp
cgogn/ui/: CMakeLists.txt  app.cpp  cgogn_ui_export.h  gl_viewer.cpp  gl_viewer.h  view.cpp  view.h
(+18 files in other folders)
